// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/EmptySet default 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <EmptySet
        filtered={true}
        handleResetFilters={[Function]}
        handleViewAll={[Function]}
        resources="assets"
      >
        <div
          className="root"
        >
          <p
            className="text"
          >
            No assets found.
          </p>
          <button
            className="action"
            onClick={[Function]}
            type="button"
          >
            Reset filters
          </button>
           or 
          <button
            className="action"
            onClick={[Function]}
            type="button"
          >
            View all entries
          </button>
        </div>
      </EmptySet>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/EmptySet empty 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <EmptySet
        filtered={false}
        handleResetFilters={null}
        handleViewAll={null}
        resources="assets"
      >
        <div
          className="root"
        >
          <p
            className="text"
          >
            No assets available.
          </p>
        </div>
      </EmptySet>
    </div>
  </Router>
</MemoryRouter>
`;
